--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/shuffle-array": "^0.0.28",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-typescript": "^4.3.1",
     "@vue/cli-plugin-unit-jest": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "@vue/test-utils": "1.0.0-beta.31",
+    "shuffle-array": "^1.0.1",
     "typescript": "~3.8.3",
     "vue-template-compiler": "^2.6.11"
   }
