Extract image URL generation to dedicated service

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@vue/cli-plugin-unit-jest": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "@vue/test-utils": "1.0.0-beta.31",
+    "axios-mock-adapter": "^1.18.1",
+    "flush-promises": "^1.0.2",
     "shuffle-array": "^1.0.1",
     "typescript": "~3.8.3",
     "vue-template-compiler": "^2.6.11"
